--- a/app/index.html
+++ b/app/index.html
@@ -3,15 +3,16 @@
 <head>
   <title>F-1 Feeder</title>
 </head>
-
-<body ng-app="F1FeederApp">
+<!--ng-app="F1FeederApp"-->
+<body >
   <ui-view></ui-view>
-  <script src="bower_components/angular/angular.js"></script>
+  <!--<script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-route/angular-ui-router.js"></script>    
+  <script src="bower_components/angular-route/angular-ui-router.js"></script>-->   
+  <script data-main="require-config" src="bower_components/requirejs/require.js"></script>    
     <!--<script src="bower_components/angular-route/ui-bootstrapmultidatepicker-tpls-0.14.1.js"></script>-->
-  <script src="js/app.js"></script>
+  <!--<script src="js/app.js"></script>
   <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
+  <script src="js/controllers.js"></script>-->
 </body>
 </html>
